--- a/about.html
+++ b/about.html
@@ -17,23 +17,23 @@
             <nav>
                 <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
+                        <a class="nav-link" href="home.html" role="tab" aria-controls="Home" aria-selected="true">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
+                        <a class="nav-link active" href="about.html" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
+                        <a class="nav-link" href="skills.html" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
+                        <a class="nav-link" href="experience.html" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="Formation-tab" data-bs-toggle="tab" href="#Formation" role="tab" aria-controls="Formation" aria-selected="false">Formation</a>    
+                        <a class="nav-link" href="education.html" role="tab" aria-controls="Formation" aria-selected="false">Formation</a>    
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="Contact-tab" data-bs-toggle="tab" href="#Contact" role="tab" aria-controls="Contact" aria-selected="false">Contact</a>
-                    </li>
+                        <a class="nav-link" href="contact.html" role="tab" aria-controls="Contact" aria-selected="false">Contact</a>
+                    </li>    
                 </ul>
             </nav>
         </div>
