--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <div class="container d-flex flex-column flex-md-row align-items-center min-vh-100">
+    <div class="container home-section d-flex flex-column flex-md-row align-items-center min-vh-100">
         <!--Left Section-->
         <div class="col-md-6 text-left">
             <h1 class="Home-title"><strong><em>Welcome to My Portfolio !</em></strong></h1>
