--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Portfolio - Ethan Lavogez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="bg-light p-3">
