--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <!-- About Section -->
     <div class="about container row align-items-center">
         <!--Texte à gauche-->
-        <div class="col-md-6 about text">
+        <div class="col-md-6">
             <h1 class="about-title">About<br>Me</h1>
             <!--Intro personnelle-->
             <p class="about-intro">
