--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="col-md-6 text-center">
             <h1 class="about-title">About<br>Me</h1>
             <!--Intro personnelle-->
-            <p class="about-intro">
+            <p class="about-intro mb-4">
                 Bonjour, je suis <strong>Ethan Lavogez</strong>, un étudiant en Master Data Science en Santé. 
                 Depuis mon plus jeune âge, j’ai toujours été fasciné par la manière dont les données peuvent raconter une histoire 
                 et transformer des idées en solutions concrètes. Aujourd’hui, je me concentre sur l’impact que la science des données 
@@ -53,7 +53,7 @@
             </p>
 
             <!-- Passion pour le sport -->
-            <p class="about-sport">
+            <p class="about-sport mb-4">
                 En dehors de mes études, je suis un grand passionné de sport, et plus particulièrement de football. 
                 Ce sport m’a appris l’importance du travail d’équipe, de la résilience et de la stratégie, des qualités 
                 que je retrouve également dans mon travail en Data Science. Mon rêve serait de combiner ces deux passions 
@@ -61,7 +61,7 @@
             </p>
 
             <!-- Objectifs futurs -->
-            <p class="about-vision">
+            <p class="about-vision mb-4">
                 Mon objectif est de trouver des opportunités qui me permettent de mettre mes compétences à profit dans les domaines 
                 qui me passionnent : la santé et/ou le sport. Je crois fermement que l’analyse des données peut révolutionner la prise 
                 de décision dans ces secteurs, qu’il s’agisse d’améliorer les performances sportives ou de personnaliser les soins aux patients.
