--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <!-- About Section -->
     <div class="about container row align-items-center justify-content-center">
         <!--Texte à gauche-->
-        <div class="col-md-6 text-center">
+        <div class="about container text-center">
             <h1 class="about-title">About<br>Me</h1>
             <!--Intro personnelle-->
             <p class="about-intro mb-4">
@@ -70,7 +70,7 @@
 
         <!--Image à droite-->
         <!-- Photo ou image inspirante -->
-        <div class="col-md-6 text-center">
+        <div class=" about-image col-md-6 text-center">
             <img src="assets/image_data_sante.png" alt="Data science" class="img-fluid">
         </div>
     </div>
