--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
     </header>
 
     <!-- About Section -->
-    <div class="about container row align-items-center justify-content-center">
+    <div class="about container row align-items-center justify-content-center text center">
         <!--Texte à gauche-->
-        <div class="about container text-center">
+        <div class="col-md-6">
             <h1 class="about-title">About<br>Me</h1>
             <!--Intro personnelle-->
             <p class="about-intro mb-4">
