--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <h1 class="about-title">About<br>Me</h1>
                 <!--Intro personnelle-->
                 <p class="about-intro">
-                    Bonjour, je suis <strong>Ethan Lavogez</strong>, un étudiant en Master Data Science en Santé. 
+                    Bonjour, je suis Ethan Lavogez, un étudiant en Master Data Science en Santé. 
                     Depuis mon plus jeune âge, j’ai toujours été fasciné par la manière dont les données peuvent raconter une histoire 
                     et transformer des idées en solutions concrètes. Aujourd’hui, je me concentre sur l’impact que la science des données 
                     peut avoir dans le domaine de la santé, en contribuant à améliorer les soins et la qualité de vie des patients.
