--- a/skills.html
+++ b/skills.html
@@ -39,17 +39,25 @@
         </div>
     </header>
 
-    <!-- Page Content -->
-    <div class="container" style="margin-top: 80px;">
-        <h1>Compétences</h1>
-        <p>Voici un aperçu de mes compétences :</p>
-        <ul>
-            <li>Data Science : Python, R, SQL</li>
-            <li>Visualisation de données : Tableau, Power BI, Matplotlib</li>
-            <li>Machine Learning : Scikit-learn, TensorFlow</li>
-            <li>Outils de collaboration : Git, GitHub</li>
-        </ul>
-    </div>
+    <!-- Compétences Section -->
+        <div class="Skills-container">
+            <h1 class="Skills-title">Skills</h1>
+            <div class="Skills-grid">
+                <div class="Skills-bubbles">
+                    <span class="bubble">Langages de programmation: Python, R</span>
+                    <span class="bubble">Manipulation et analyse des données: SQL, pandas, numpy, dplyr</span>
+                    <span class="bubble">Visualisation de données: ggplot2, matplotlib, graphics, shiny, R markdown</span>
+                    <span class="bubble">Développement Web: html, css</span>
+                    <span class="bubble">Solides bases scientifiques, mathématiques et statistiques</span>
+                    <span class="bubble">Esprit d'équipe</span>
+                    <span class="bubble">Capacité d'adaptation</span>
+                    <span class="bubble">Sens de l'organisation</span>
+                    <span class="bubble">Autonomie</span>
+                    <span class="bubble">Gestion de projets</span>
+                    <span class="bubble">Polyvalence</span>
+                </div>
+            </div>
+        </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
