--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- About Section -->
-    <div class="about container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="about container d-flex flex-column flex-md-row align-items-center min-vh-100">
         <div class="row text-center">
             <!--Texte à gauche-->
             <div class="col-md-6">
