--- a/skills.html
+++ b/skills.html
@@ -39,6 +39,8 @@
         </div>
     </header>
 
+    <div class="Skills container d-flex flex-column flex-md-row align-items-center min-vh-100">
+    <div class="row text-center">
     <!-- Compétences Section -->
         <div class="Skills-container">
             <h1 class="Skills-title">Skills</h1>
@@ -58,6 +60,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
