--- a/experience.html
+++ b/experience.html
@@ -39,24 +39,129 @@
         </div>
     </header>
 
-    <!-- Page Content -->
-    <div class="container" style="margin-top: 80px;">
-        <h1>Experiences</h1>
-        <p>Here is an overview of my professional experiences:</p>
-        <ul>
-            <li><strong>Data Scientist Intern</strong> - XYZ Company (Jan 2023 - June 2023)
-                <ul>
-                    <li>Developed predictive models to optimize healthcare outcomes.</li>
-                    <li>Implemented data visualization dashboards using Python and Power BI.</li>
-                </ul>
-            </li>
-            <li><strong>Service Civique</strong> - Amateur Football Club (2021 - 2022)
-                <ul>
-                    <li>Coordinated team activities and managed logistical operations.</li>
-                    <li>Collected and analyzed match performance statistics.</li>
-                </ul>
-            </li>
-        </ul>
+    <!-- Experiences Section -->
+        <h1 class="timeline-section-title">Expériences</h1>
+            <div class="timeline">
+                <!-- Expérience 1 -->
+                <div class="timeline-item">
+                    <div class="circle">1</div>
+                    <div class="timeline-content">
+                        <img src="assets/AAE_Aix.png" alt="Club Logo" class="experience-logo">
+                        <h3>Service Civique - Club de Football AAE-Aix-Noulette</h3>
+                        <p><strong>Lieu :</strong> Aix-Noulette, France</p>
+                        <p><strong>Durée :</strong> Octobre 2022 - Juillet 2023</p>
+                        <p><strong>Missions :</strong></p>
+                        <ul>
+                            <li>Organisation d’événements sportifs (tournois, plateaux, matchs amicaux).</li>
+                            <li>Encadrement et animation des jeunes catégories.</li>
+                            <li>Coach d'une équipe de catégorie u16.</li>
+                            <li>Assurer le respect, la sécurité et le bon déroulement entre les adversaires.</li>
+                        </ul>
+                        <p><strong>Objectif :</strong> Développer des compétences en organisation sportive et favoriser le développement des jeunes joueurs tout en renforçant la dynamique locale autour du club.</p>
+                        <p><strong>Compétences développées :</strong></p>
+                        <ul>
+                            <li>Leadership et capacité à diriger des groupes.</li>
+                            <li>Organisation et gestion du temps dans un contexte sportif.</li>
+                            <li>Communication efficace avec les jeunes, les entraîneurs, et les partenaires.</li>
+                            <li>Résolution de problèmes logistiques en situation réelle.</li>
+                        </ul>
+                        <p><strong>Ce que j’ai appris :</strong></p>
+                        <p>
+                            Cette expérience m’a permis de développer mon sens de l’organisation, de renforcer mon esprit d’équipe, 
+                            et d’apprendre à travailler avec des publics variés. J’ai également découvert l’impact du sport comme outil éducatif 
+                            et social, ce qui a renforcé ma passion pour le football et mon envie de contribuer au domaine sportif.
+                        </p>
+                    </div>
+                </div>
+    
+                <!-- Expérience 2 -->
+                <div class="timeline-item">
+                    <div class="circle">2</div>
+                    <div class="timeline-content">
+                        <img src="assets/Prysmian_Logo.png" alt="Draka Logo" class="experience-logo">
+                        <h3>Agent de Production - Draka Comteq France</h3>
+                        <p><strong>Type d'emploi :</strong> Interim</p>
+                        <p><strong>Lieu :</strong> Billy-Berclau, France</p>
+                        <p><strong>Durée :</strong> Avril 2023 - Août 2023</p>
+                        <p><strong>Missions :</strong></p>
+                        <ul>
+                            <li>Entretien et maintenance de premier niveau des machines de l’usine</li>
+                            <li>Préparation de commandes, contrôle de la marchandise, conditionnement et étiquetage,palettisation</li>
+                            <li>Suivi de la production avec autocontrôles.</li>
+                            <li>Collaboration avec les équipes techniques pour résoudre les anomalies détectées.</li>
+                        </ul>
+                        <p><strong>Objectif :</strong> Assurer un haut niveau de qualité et de fiabilité dans la production de câbles optiques pour répondre aux exigences de l'entreprise.</p>
+                        <p><strong>Compétences développées :</strong></p>
+                        <ul>
+                            <li>Rigueur et respect des processus de production.</li>
+                            <li>Capacité à respecter la quantité et la qualité de production dans les délais de fabrication.</li>
+                            <li>Précision dans les tâches techniques et les contrôles qualité.</li>
+                            <li>Esprit d’équipe pour résoudre rapidement les problèmes de production.</li>
+                        </ul>
+                        <p><strong>Ce que j'ai appris :</strong></p> 
+                        <p> 
+                            Cette expérience m’a permis de découvrir les exigences d’un environnement industriel, d’appliquer des compétences techniques 
+                            et de comprendre l’importance de la coordination entre les différents acteurs de la production.
+                        </p>
+                    </div>
+                </div>
+    
+                <!-- Expérience 3 -->
+                 <div class="timeline-item">
+                    <div class="circle">3</div>
+                    <div class="timeline-content">
+                        <img src="assets/Saint_Phi.png" alt="Saint Phi Logo" class="experience-logo">
+                        <h3>Ingénieur biomédical - Hôpital Saint Philibert</h3>
+                        <p><strong>Type d'emploi :</strong> Stage</p>
+                        <p><strong>Lieu :</strong> Lomme, France</p>
+                        <p><strong>Durée :</strong> Octobre 2023 - Décembre 2023</p>
+                        <p><strong>Missions :</strong></p>
+                        <ul>
+                            <li>Inventaire des appareils biomédicaux selon les différents services hospitaliers</li>
+                            <li>Classement (classe 1, 2a, 2b et 3) des dispositif médicaux selon la GMAO</li>
+                            <li>Contacter les entreprises conceptrices pour les obligations de maintenance</li>
+                            <li>Analyses de données avec interprétation à partir de celles-ci</li>
+                        </ul>
+                        <p><strong>Objectif :</strong> Garantir la sécurité des patients et la fiabilité des dispositifs médicaux en répondant aux exigences des normes hospitalières.</p>
+                        <p><strong>Compétences développées :</strong></p>
+                        <ul>
+                            <li>Communication efficace avec des équipes pluridisciplinaires (techniciens, ingénieurs, commerciaux).</li>
+                            <li>Développement de mes connaissances en normes de sécurité et de qualité en milieu hospitalier.</li>
+                            <li>Développement de mes connaissances des différents équipements biomédicaux et leurs utilisations au sein d'un hôpital</li>
+                        </ul>
+                        <p><strong>Ce que j'ai appris :</strong> Cette expérience m’a permis de mettre en pratique mes compétences tout en développant de nouvelles aptitudes techniques et relationnelles essentielles dans le domaine biomédical et hospitalier.</p>
+                    </div>
+                 </div>
+
+                 <!--Expérience 4-->
+                 <div class="timeline-item">
+                    <div class="circle">4</div>
+                    <div class="timeline-content">
+                        <img src="assets/cerim.png" alt="cerim logo" class="experience-logo">
+                        <h3>Data Scientist - CERIM</h3>
+                        <p><strong>Type d'emploi :</strong> Stage</p>
+                        <p><strong>Lieu :</strong> Centre d'Etudes et de Recherche en Informatique Médicale (CERIM), Lille, France</p>
+                        <p><strong>Durée :</strong> Avril 2024 - Juin 2024</p>
+                        <p><strong>Missions :</strong></p>
+                        <ul>
+                            <li>Participer au projet en cours - HELISMUR</li>
+                            <li>Nettoyage des bases de données</li>
+                            <li>Analyser des bases de données</li>
+                            <li>Créer des visualisations à partir du langage de programmation Jupyter Notebook</li>
+                        </ul>
+                        <p><strong>Objectif :</strong> Créer des visualisations claires et informatives des données des hélicoptères du SMUR afin de faciliter leur analyse et de soutenir la prise de décision.</p>
+                        <p><strong>Compétences développées :</strong></p>
+                        <ul>
+                            <li>Programmation et visualisation de données à l'aide de Jupyter Notebook et des bibliothèques telles que Matplotlib et Plotly.</li>
+                            <li>Data management et gestion de bases de données géographiques.</li>
+                            <li>Auto-formation et résolution de problèmes.</li>
+                            <li>Communication et collaboration</li>
+                        </ul>
+                        <p><strong>Ce que j'ai appris :</strong> Cette expérience m'a permis de contribuer à l'amélioration du projet HéliSMUR et d'acquérir un ensemble de compétences qui me sont précieuses pour la réussite de mes études ainsi que pour ma carrière future dans le domaine de la data science et des services de santé.</p>
+                    </div>
+                 </div>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap JS -->
