--- a/skills.html
+++ b/skills.html
@@ -49,7 +49,7 @@
                     <span class="bubble">Langages de programmation: Python, R</span>
                     <span class="bubble">Manipulation et analyse des données: SQL, pandas, numpy, dplyr</span>
                     <span class="bubble">Visualisation de données: ggplot2, matplotlib, graphics, shiny, R markdown</span>
-                    <span class="bubble">Développement Web: html, css</span>
+                    <span class="bubble">Développement Web: HTML, CSS, Bootstrap JS</span>
                     <span class="bubble">Solides bases scientifiques, mathématiques et statistiques</span>
                     <span class="bubble">Esprit d'équipe</span>
                     <span class="bubble">Capacité d'adaptation</span>
