--- a/education.html
+++ b/education.html
@@ -39,24 +39,61 @@
         </div>
     </header>
 
-    <!-- Page Content -->
-    <div class="container" style="margin-top: 80px;">
-        <h1>Formation</h1>
-        <p>Voici un aperçu de mon parcours éducatif :</p>
-        <ul>
-            <li><strong>Master en Data Science en Santé</strong> - Université XYZ (2022 - 2024)
-                <ul>
-                    <li>Spécialisation en intelligence artificielle appliquée à la santé.</li>
-                    <li>Projets sur l'analyse des données cliniques et la prédiction des maladies.</li>
-                </ul>
-            </li>
-            <li><strong>Licence en Sciences pour la Santé</strong> - Université ABC (2019 - 2022)
-                <ul>
-                    <li>Acquisition de bases solides en biostatistiques et épidémiologie.</li>
-                    <li>Introduction à la programmation en Python et R.</li>
-                </ul>
-            </li>
-        </ul>
+    <!--Formation Section-->
+        <h1 class="timeline-section-title">Formation</h1>
+            <div class="timeline">
+                <!--Formation 1-->
+                <div class="timeline-item">
+                    <div class="circle">1</div>
+                    <div class="timeline-content">
+                        <img src="assets/lycee.jpg" alt="lycee" class="Formation-logo">
+                        <h3>Baccalauréat Scientifique - Option Mathématiques</h3>
+                        <p><strong>Lieu :</strong> Lycée Léo-Lagrange, Bully-les-mines</p>
+                        <p><strong>Années :</strong> Septembre 2017 - Juillet 2021</p>
+                        <p><strong>Compétences :</strong></p>
+                        <ul>
+                            <li>Mathématiques</li>
+                            <li>Physique-Chimie</li>
+                            <li>Siences de la vie et de la terre</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Formation 2 -->
+                <div class="timeline-item">
+                    <div class="circle">2</div>
+                    <div class="timeline-content">
+                        <img src="assets/univ.png" alt="Université Logo" class="Formation-logo">
+                        <h3>Licence en Sciences pour la Santé - Option Ingénierie Biomédicale</h3>
+                        <p><strong>Lieu :</strong> Université de Lille, France
+                        <p><strong>Années :</strong> Septembre 2021 - Juin 2024</p>
+                        <p><strong>Description de la formation :</strong></p>
+                        <ul>
+                            <li>Formation interdisciplinaire couvrant les sciences fondamentales relatives à la santé, les sciences humaines et sociales, l'environnement et la qualité.</li>
+                            <li>Acquisition des techniques de communication (expression orale, expression écrite, maîtrise de deux langues vivantes étrangères, outil informatique) et enfin de réalisation de projets et de travaux de groupes.</li>
+                            <li>Acquisition de connaissances fondamentales en biologie, physiologie, et ingénierie biomédicale.</li> 
+                        </ul>
+                        <p><strong>Compétences acquises :</strong></p>
+                        <ul>
+                            <li>Elaborer et mettre en oeuvre une méthodologie de travail et une démarche qualité dans le domaine de la santé et/ou du médico-social et/ou de l’environnement et/ou de l’agro-alimentaire.</li>
+                            <li>Mobiliser des savoirs disciplinaires spécialisés en santé et/ou environnement et/ou médico- social et/ou agro-alimentaire</li>
+                            <li>Maîtrise de la communication orale/écrite.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Formation 3 -->
+                <div class="timeline-item">
+                    <div class="circle">3</div>
+                    <div class="timeline-content">
+                        <img src="assets/univ.png" alt="Master Logo" class="Formation-logo">
+                    <h3>Master en Data Science en Santé</h3>
+                    <p>Université de Lille - ILIS (2024 - )</p>
+                    <p>Description succincte de ce que vous avez appris ou réalisé.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap JS -->
