--- a/experience.html
+++ b/experience.html
@@ -45,6 +45,7 @@
                 <!-- Expérience 1 -->
                 <div class="timeline-item">
                     <div class="circle">1</div>
+                    <div class="experiences .circle"></div>
                     <div class="timeline-content">
                         <img src="assets/AAE_Aix.png" alt="Club Logo" class="experience-logo">
                         <h3>Service Civique - Club de Football AAE-Aix-Noulette</h3>
@@ -77,6 +78,7 @@
                 <!-- Expérience 2 -->
                 <div class="timeline-item">
                     <div class="circle">2</div>
+                    <div class="experiences .circle"></div>
                     <div class="timeline-content">
                         <img src="assets/Prysmian_Logo.png" alt="Draka Logo" class="experience-logo">
                         <h3>Agent de Production - Draka Comteq France</h3>
@@ -109,6 +111,7 @@
                 <!-- Expérience 3 -->
                  <div class="timeline-item">
                     <div class="circle">3</div>
+                    <div class="experiences .circle"></div>
                     <div class="timeline-content">
                         <img src="assets/Saint_Phi.png" alt="Saint Phi Logo" class="experience-logo">
                         <h3>Ingénieur biomédical - Hôpital Saint Philibert</h3>
@@ -136,6 +139,7 @@
                  <!--Expérience 4-->
                  <div class="timeline-item">
                     <div class="circle">4</div>
+                    <div class="experiences .circle"></div>
                     <div class="timeline-content">
                         <img src="assets/cerim.png" alt="cerim logo" class="experience-logo">
                         <h3>Data Scientist - CERIM</h3>
