--- a/education.html
+++ b/education.html
@@ -88,8 +88,21 @@
                     <div class="timeline-content">
                         <img src="assets/univ.png" alt="Master Logo" class="Formation-logo">
                     <h3>Master en Data Science en Santé</h3>
-                    <p>Université de Lille - ILIS (2024 - )</p>
-                    <p>Description succincte de ce que vous avez appris ou réalisé.</p>
+                    <p><strong>Lieu :</strong> Université de Lille, France
+                    <p><strong>Années :</strong> Septembre 2024 - Août 2026</p>
+                    <p><strong>Description de la formation :</strong></p>
+                    <ul>
+                        La science des données vous interpelle à l'ère du big data ? Vous souhaitez prendre part aux prises de décision dans le domaine de la santé à travers l'analytique des données massives ? Vous souhaitez vous former à un métier d'avenir alliant santé, machine-learning, et intelligence artificielle ?
+                        Avec le parcours "Data Science pour la santé" en partenariat avec Polytech' Lille, vous deviendrez de véritables spécialistes dans les domaines du big data, du machine-learning et de l'intelligence artificielle appliqués au domaine de la santé !
+                        Le parcours "Data Science pour la Santé » du Master Ingénierie de la Santé" a pour objectif de former des professionnels de haut niveau, capables de faire face aux enjeux de l’exploitation des données massives de santé, afin d’en exprimer le potentiel au maximum.
+                        Il s’agit pour ces experts en sciences de la donnée de santé, non seulement de disposer des connaissances et savoir-faire nécessaires à la conception et implémentation d’une architecture « big data » mais aussi l’exploitation pertinente de l’information grâce à la maitrise de l'analytique de grands volumes de données afin d'en tirer des avantages pour le secteur de la santé et des sciences du vivant.
+                    </ul>
+                    <p><strong>Compétences à la sortie du Master :</strong></p>
+                    <ul>
+                        <strong>Maîtrise de l’ingénierie (Intelligence Artificielle, Machine-learning, Big data, statistique)</strong> dans toutes ses phases (collecte et extraction des données de santé, visualisation, traitement du signal et des images, fouille de données) et toutes ses composantes (des technologies jusqu’à l’éthique).
+                        Maîtrise du domaine de la santé, des sciences du vivant dans ses enjeux (organisation, grandes problématiques de santé, la médecine et les industries pharmaceutiques et agro-alimentaires) et ses composantes (médecine, santé des populations, industries).
+                        <strong>Capacité à concevoir, gérer un projet « data »</strong> et surtout à communiquer ses résultats pour éclairer la prise de décision de santé, qu’elle soit clinique, industrielle ou de santé publique. 
+                    </ul>
                     </div>
                 </div>
             </div>
