--- a/contact.html
+++ b/contact.html
@@ -39,18 +39,35 @@
         </div>
     </header>
 
-    <!-- Page Content -->
-    <div class="container" style="margin-top: 80px;">
-        <h1>Contact</h1>
-        <p>Vous pouvez me contacter via les moyens suivants :</p>
-        <ul>
-            <li><strong>Email :</strong> ethan.lavogez@example.com</li>
-            <li><strong>Téléphone :</strong> +33 6 12 34 56 78</li>
-            <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/ethanlavogez" target="_blank">linkedin.com/in/ethanlavogez</a></li>
-            <li><strong>GitHub :</strong> <a href="https://github.com/ethanlavogez" target="_blank">github.com/ethanlavogez</a></li>
-        </ul>
-        <p>N'hésitez pas à me laisser un message pour toute question ou collaboration !</p>
-    </div>
+    <!-- Contact Section -->
+    <div class="tab-pane fade Contact-section" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
+        <div class="contact-title">
+            <h1>Contactez-moi</h1>
+        </div>
+        <div class="contact-cards">
+            <!-- Carte Email -->
+            <div class="contact-card">
+                <a href="mailto:ethan.lavogez.etu@univ-lille.fr" target="_blank">
+                    <img src="assets/mail.png" alt="Email Icon" class="contact-icon">
+                    <p>Envoyez-moi un email</p>
+                </a>
+            </div>
+            <!-- Carte LinkedIn -->
+            <div class="contact-card">
+                <a href="https://www.linkedin.com/in/ethan-lavogez-b85a59291/" target="_blank">
+                    <img src="assets/linkedin.png" alt="LinkedIn Icon" class="contact-icon">
+                    <p>Connectez-vous sur LinkedIn</p>
+                </a>
+            </div>
+            <!-- Carte GitHub -->
+            <div class="contact-card">
+                <a href="https://github.com/ethanlavogez" target="_blank">
+                    <img src="assets/github.png" alt="GitHub Icon" class="contact-icon">
+                    <p>Explorez mon GitHub</p>
+                </a>
+            </div>
+        </div>
+    </div>        
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
