--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
 
     <!-- Contact Section -->
     <div class="contact container d-flex flex-column flex-md-row align-items-center min-vh-100">
+    <div class="row text-center">
         <div class="contact-title">
             <h1>Contactez-moi</h1>
         </div>
@@ -67,6 +68,7 @@
                 </a>
             </div>
         </div>
+    </div>
     </div>        
 
     <!-- Bootstrap JS -->
