--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- Contact Section -->
-    <div class="contact container d-flex flex-column flex-md-row align-items-center min-vh-100">
+    <div class="contact container d-flex flex-column justify-content-center align-items-center min-vh-100">
     <div class="row text-center">
         <div class="contact-title">
             <h1>Contactez-moi</h1>
