--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,14 @@
                     <p>Explorez mon GitHub</p>
                 </a>
             </div>
+            <!-- Carte Stage -->
+            <div class="contact-card stage-card">
+                <div class="stage-content">
+                    <h2>À la recherche d'un stage !</h2>
+                    <p>Je suis à la recherche d'un stage de 5 mois du <strong>24 mars 2025</strong> au <strong>14 août 2025</strong>.</p>
+                    <p>Si vous avez des opportunités, n'hésitez pas à me contacter !</p>
+                </div>
+            </div>
         </div>
     </div>
     </div>        
