--- a/about.html
+++ b/about.html
@@ -74,6 +74,15 @@
             <div class=" about-image col-md-6 text-center">
                 <img src="assets/image_data_sante.png" alt="Data science" class="img-fluid">
             </div>
+            <!-- Carte Stage -->
+            <div class="stage-announcement">
+                <h2><i class="fas fa-briefcase"></i>À la recherche d'un stage !</h2>
+                <p>Actuellement étudiant en Master Data Science en Santé, je suis à la recherche d'un stage de 5 mois du <strong>24 mars 2025</strong> au <strong>14 août 2025</strong> dans les domaines qui me passionnent : la Data Science appliquée à la santé ou au sport..</p>
+                <p>Mon objectif est de mettre mes compétences en analyse de données, machine learning et visualisation au service de projets concrets. Je souhaite contribuer à l'amélioration des décisions médicales dans le secteur de la santé ou à l'optimisation des performances sportives dans un club ou une organisation.</p>
+                <p>Je suis motivé, curieux, et prêt à m’investir pleinement pour apporter de la valeur à votre équipe.</p>
+                <p>Si vous avez des opportunités, n'hésitez pas à me contacter !</p>
+                <p class="mt-3"> <a href="contact.html" class="btn btn-primary">Me contacter</a> </p>
+            </div>
         </div>
     </div>
 
