--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
                 <!--Intro personnelle-->
                 <p class="about-intro">
                     Bonjour, je suis Ethan Lavogez, un étudiant en Master Data Science en Santé. 
-                    Depuis mon plus jeune âge, j’ai toujours été fasciné par la manière dont les données peuvent raconter une histoire 
-                    et transformer des idées en solutions concrètes. Aujourd’hui, je me concentre sur l’impact que la science des données 
+                    Depuis plusieurs années, je suis fasciné par la manière dont les données peuvent raconter une histoire 
+                    et transformer des idées en solutions concrètes. C'est donc pourquoi aujourd’hui, je me concentre sur l’impact que la science des données 
                     peut avoir dans le domaine de la santé, en contribuant à améliorer les soins et la qualité de vie des patients.
                 </p>
 
@@ -57,7 +57,7 @@
                 <p class="about-sport">
                     En dehors de mes études, je suis un grand passionné de sport, et plus particulièrement de football. 
                     Ce sport m’a appris l’importance du travail d’équipe, de la résilience et de la stratégie, des qualités 
-                    que je retrouve également dans mon travail en Data Science. Mon rêve serait de combiner ces deux passions 
+                    que je retrouve également dans mes études en Data Science. Mon rêve serait de combiner ces deux passions 
                     en appliquant mes compétences de data scientist au milieu d'un club de football professionnel.
                 </p>
 
@@ -77,8 +77,8 @@
             <!-- Carte Stage -->
             <div class="stage-announcement">
                 <h2><i class="fas fa-briefcase"></i>À la recherche d'un stage !</h2>
-                <p>Actuellement étudiant en Master Data Science en Santé, je suis à la recherche d'un stage de 5 mois du <strong>24 mars 2025</strong> au <strong>14 août 2025</strong> dans les domaines qui me passionnent : la Data Science appliquée à la santé ou au sport..</p>
-                <p>Mon objectif est de mettre mes compétences en analyse de données, machine learning et visualisation au service de projets concrets. Je souhaite contribuer à l'amélioration des décisions médicales dans le secteur de la santé ou à l'optimisation des performances sportives dans un club ou une organisation.</p>
+                <p>Je suis à la recherche d'un stage de 5 mois du <strong>24 mars 2025</strong> au <strong>14 août 2025</strong> dans les domaines qui me passionnent : la Data Science appliquée à la santé et/ou au sport..</p>
+                <p>Mon objectif est de mettre mes compétences au service de projets concrets. Je souhaite contribuer à l'amélioration des décisions médicales dans le secteur de la santé ou à l'optimisation des performances sportives dans un club ou une organisation.</p>
                 <p>Je suis motivé, curieux, et prêt à m’investir pleinement pour apporter de la valeur à votre équipe.</p>
                 <p>Si vous avez des opportunités, n'hésitez pas à me contacter !</p>
                 <p class="mt-3"> <a href="contact.html" class="btn btn-primary">Me contacter</a> </p>
