--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
             <div class="contact-card">
                 <a href="https://www.linkedin.com/in/ethan-lavogez-b85a59291/" target="_blank">
                     <img src="assets/linkedin.png" alt="LinkedIn Icon" class="contact-icon">
-                    <p>Connectez-vous sur LinkedIn</p>
+                    <p>Connectons-nous sur LinkedIn</p>
                 </a>
             </div>
             <!-- Carte GitHub -->
@@ -66,6 +66,11 @@
                     <img src="assets/github.png" alt="GitHub Icon" class="contact-icon">
                     <p>Explorez mon GitHub</p>
                 </a>
+            </div>
+            <!-- Carte CV -->
+            <div class="cv-download">
+                <h2>Téléchargez mon CV</h2>
+                <a href="assets/mon_cv.pdf" class="btn btn-primary" download>Télécharger le CV</a>
             </div>
         </div>
     </div>
