--- a/education.html
+++ b/education.html
@@ -70,7 +70,7 @@
                         <p><strong>Description de la formation :</strong></p>
                         <ul>
                             <li>Formation interdisciplinaire couvrant les sciences fondamentales relatives à la santé, les sciences humaines et sociales, l'environnement et la qualité.</li>
-                            <li>Acquisition des techniques de communication (expression orale, expression écrite, maîtrise de deux langues vivantes étrangères, outil informatique) et enfin de réalisation de projets et de travaux de groupes.</li>
+                            <li>Acquisition des techniques de communication (expression orale, expression écrite, maîtrise de deux langues vivantes étrangères, outil informatique), réalisation de projets et travaux de groupes.</li>
                             <li>Acquisition de connaissances fondamentales en biologie, physiologie, et ingénierie biomédicale.</li> 
                         </ul>
                         <p><strong>Compétences acquises :</strong></p>
