--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,8 @@
                 </a>
             </div>
             <!-- Carte CV -->
-            <div class="cv-download">
-                <h2>Téléchargez mon CV</h2>
+            <div class="cv-download mt-4">
+                <h2>Voici mon CV</h2>
                 <a href="assets/mon_cv.pdf" class="btn btn-primary" download>Télécharger le CV</a>
             </div>
         </div>
