--- a/home.html
+++ b/home.html
@@ -37,6 +37,12 @@
                     </li>
                 </ul>
             </nav>
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="modeToggle" class="mr-2">Mode Sombre</label>
+                    <input type="checkbox" id="modeToggle" class="form-check-input" onchange="document.body.classList.toggle('dark-mode')">
+                </div>
+            </form>
         </div>
     </header>
 
