--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" href="home.html" role="tab" aria-controls="Home" aria-selected="true">Home</a>
+                        <a class="nav-link" href="home.html" role="tab" aria-controls="Home" aria-selected="true">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
