--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
             </div>
                 <!-- Carte CV -->
                 <div class="cv-download mt-4">
-                    <h2>Voici mon CV</h2>
-                    <a href="assets/mon_cv.pdf" class="btn btn-primary" download>Télécharger le CV</a>
+                    <h2>Lien pour télécharger mon CV</h2>
+                    <a href="assets/mon_cv.pdf" class="btn btn-primary" download>Download my CV</a>
                 </div>
         </div>
     </div>        
