--- a/home.html
+++ b/home.html
@@ -19,13 +19,13 @@
 </head>
 <body>
     <header class="bg-light p-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div>
+        <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+            <div class="text-center text-md-start mb-3 mb-md-0">
                 <h1 class="m-0">Ethan Lavogez</h1>
                 <h3 class="m-0">Student in Healthcare Data Science</h3>
             </div>
             <nav>
-                <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
+                <ul class="nav nav-tabs justify-content-center justify-content-md-end" id="portfolioTabs" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" href="home.html" role="tab" aria-controls="Home" aria-selected="true">Home</a>
                     </li>
